# case-ta6-platform-assessment-camkes-apps

./: LICENSE  README.md  settings.cmake
apps/case-gs-step1/: CMakeLists.txt  case-gs-step1.camkes
apps/case-gs-step1/vm/: CMakeLists.txt
apps/case-gs-step1/vm/exynos5422/: devices.camkes
apps/case-gs-step2/: settings.cmake
apps/case-gs-step2/vm/: CMakeLists.txt
apps/case-gs-threat-34/: CMakeLists.txt
apps/case-gs-threat-34/vm/: CMakeLists.txt
apps/case-gs-threat-3A1/vm/: CMakeLists.txt
apps/case-gs-threat-3A2/vm/: CMakeLists.txt  README.md
apps/case-gs-threat-3A2/vm/overlay_files/init_scripts/init.d/: S98uxas
apps/case-uav-step1/: CMakeLists.txt  case-uav-step1.camkes
apps/case-uav-step1/vm/: CMakeLists.txt
apps/case-uav-step1/vm/exynos5422/: devices.camkes
apps/case-uav-step2/: CMakeLists.txt  case-uav-step2.camkes  settings.cmake
apps/case-uav-step2/components/AutopilotSerialServer/: AutopilotSerialServer.camkes  CMakeLists.txt
apps/case-uav-step2/components/WaypointManager/: CMakeLists.txt  WaypointManager.camkes
apps/case-uav-step2/hexdump/include/: hexdump.h
apps/case-uav-step2/hexdump/src/: hexdump.c
apps/case-uav-step2/queue/include/: data.h  queue.h
apps/case-uav-step2/vm/: CMakeLists.txt
apps/case-uav-step2/vm/exynos5422/: devices.camkes
apps/case-uav-step2/vm/src/: cross_vm_connections_vmUxAS.c
apps/case-uav-step3/: CMakeLists.txt  case-uav-step3.camkes
apps/case-uav-step3/camkes_log_queue/src/: camkes_log_queue.c
apps/case-uav-step3/components/AutopilotSerialServer/src/: autopilot_serial_server.c
apps/case-uav-step3/components/AutopilotSerialServer/src/plat/arm_common/: plat.c
apps/case-uav-step3/components/WaypointManager/: CMakeLists.txt
apps/case-uav-step3/components/WaypointManager/src/: waypoint_manager.c
apps/case-uav-step3/components/WaypointManager/src/CMASI/: AutomationResponse.h
apps/case-uav-step3/exynos5422/: devices.camkes
apps/case-uav-step3/hexdump/include/: hexdump.h
apps/case-uav-step3/hexdump/src/: hexdump.c
apps/case-uav-step3/vmRadio/: CMakeLists.txt
apps/case-uav-step3/vmRadio/apps/camkes_log_relay/: CMakeLists.txt  camkes_log_relay.c
apps/case-uav-step3/vmRadio/exynos5422/: devices.camkes
apps/case-uav-step3/vmRadio/overlay_files/ex/p2/01_Waterway/: cfg_WaterwaySearch_UAV.xml
apps/case-uav-step3/vmRadio/overlay_files/init_scripts/: inittab_hvc0
apps/case-uav-step3/vmRadio/overlay_files/init_scripts/init.d/: S98uxas
apps/case-uav-step3/vmRadio/src/: cross_vm_connections_vmRadio.c
apps/case-uav-step3/vmUxAS/: CMakeLists.txt
apps/case-uav-step3/vmUxAS/exynos5422/: devices.camkes
apps/case-uav-step3/vmUxAS/overlay_files/ex/p2/01_Waterway/: cfg_WaterwaySearch_UAV.xml
apps/case-uav-step3/vmUxAS/overlay_files/init_scripts/: inittab_hvc0
apps/case-uav-step3/vmUxAS/overlay_files/init_scripts/init.d/: S98uxas
apps/case-uav-step3/vmUxAS/src/: cross_vm_connections_vmUxAS.c
apps/case-uav-step4/: case-uav-step4.camkes  settings.cmake
apps/case-uav-step4/CMASI/include/: EntityConfiguration.h  EntityState.h  Location3D.h  MissionCommand.h  PayloadAction.h  PayloadState.h  Task.h  VehicleAction.h  VehicleActionCommand.h  Waypoint.h  enums.h
apps/case-uav-step4/CMASI/src/: EntityConfiguration.c  KeyValuePair.c  PayloadAction.c  SearchTask.c  VehicleAction.c  VehicleActionCommand.c  Wedge.c
apps/case-uav-step4/camkes_log_queue/include/: camkes_log_queue.h
apps/case-uav-step4/components/AttestationGate/: AttestationGate.camkes  CMakeLists.txt
apps/case-uav-step4/components/AutomationRequestFilter/: AutomationRequestFilter.camkes
apps/case-uav-step4/components/GeofenceMonitor/: CMakeLists.txt
apps/case-uav-step4/components/LineSearchTaskFilter/: CMakeLists.txt  LineSearchTaskFilter.camkes
apps/case-uav-step4/components/WaypointManager/: CMakeLists.txt
apps/case-uav-step4/vmRadio/: CMakeLists.txt
apps/case-uav-step4/vmUxAS/: CMakeLists.txt
apps/case-uav-step5/: CMakeLists.txt  case-uav-step5.camkes  settings.cmake
apps/case-uav-step5/am_queue/include/: am_data.h  am_queue.h
apps/case-uav-step5/am_queue/src/: am_queue.c
apps/case-uav-step5/components/AttestationGate/: AttestationGate.camkes  CMakeLists.txt
apps/case-uav-step5/components/AttestationGate/src/: attestation_gate.c
apps/case-uav-step5/components/AutopilotSerialServer/include/plat/arm_common/plat/: apss_serial.h
apps/case-uav-step5/components/AutopilotSerialServer/src/: autopilot_serial_server.c
apps/case-uav-step5/components/WaypointManager/src/: waypoint_manager.c
apps/case-uav-step5/queue/src/: queue.c
apps/case-uav-step5/vmRadio/: CMakeLists.txt
apps/case-uav-step5/vmRadio/overlay_files/ex/p2/01_Waterway/: cfg_WaterwaySearch_UAV.xml
apps/case-uav-step5/vmRadio/overlay_files/init_scripts/: inittab_hvc0
apps/case-uav-step5/vmUxAS/overlay_files/ex/p2/01_Waterway/: cfg_WaterwaySearch_UAV.xml
apps/case-uav-step6/: CMakeLists.txt  case-uav-step6.camkes
apps/case-uav-step6/vmRadio/: CMakeLists.txt
apps/case-uav-step6/vmUxAS/: CMakeLists.txt
apps/case-uav-threat-10A/: case-uav-step4.camkes
apps/case-uav-threat-10A-unmitigated/: CMakeLists.txt
apps/case-uav-threat-10A-unmitigated/camkes_log_queue/: CMakeLists.txt
apps/case-uav-threat-10A-unmitigated/vmUxAS/: CMakeLists.txt
apps/case-uav-threat-10A/vm/: domain_schedule.c
apps/case-uav-threat-10A/vmRadio/: CMakeLists.txt
apps/case-uav-threat-10A/vmUxAS/: CMakeLists.txt
apps/case-uav-threat-10B/: CMakeLists.txt  case-uav-step4.camkes
apps/case-uav-threat-10B-unmitigated/exynos5422/: devices.camkes
apps/case-uav-threat-10B/vm/: domain_schedule.c
apps/case-uav-threat-10B/vmUxAS/: CMakeLists.txt
apps/case-uav-threat-3A1/: case-uav-step4.camkes
apps/case-uav-threat-3A1-unmitigated/: case-uav-step4.camkes  settings.cmake
apps/case-uav-threat-3A1-unmitigated/vmUxAS/: CMakeLists.txt
apps/case-uav-threat-3A2-unmitigated/: CMakeLists.txt
apps/case-uav-threat-3A2-unmitigated/vmUxAS/: CMakeLists.txt
apps/case-uav-threat-3A2/am_queue/: CMakeLists.txt
apps/case-uav-threat-3A2/vm/: domain_schedule.c
(+159 files in other folders)
